# simcorrect

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  caid_contract.py  correction_and_validation.py  demo.py  divergence_detector.py  mjcf_correction.py  opencad.py  parameter_identifier.py  pyproject.toml  render_video1_final.py  sim_pair.py  simcorrect_mujoco.py  simcorrect_paths.py
Problem1_ForearmLength/: README.md  baseline.py  caid_loop.py  correction_and_validation.py  demo.py  divergence_detector.py  forearm_workflow.py  forearm_workflow_clean.py  parameter_identifier.py  paths.py  physical_sim.py  real_grasp.py  render_demo.py  render_demo_backup.py  sim_pair.py  trajectory_io.py
Problem2_WristOffset/: MUJOCO_LOG.TXT  README.md  correction_and_validation.py  demo.py  divergence_detector.py  parameter_identifier.py  paths.py  render_demo.py  sim_pair.py  step0.py
Problem3_JointFriction/: README.md  correction_and_validation.py  divergence_detector.py  joint_corrected.stl  parameter_identifier.py  paths.py  render_demo.py  sim_pair.py
Problem4_JointZeroOffset/: README.md  correction_and_validation.py  divergence_detector.py  parameter_identifier.py  render_demo.py  sim_pair.py  step0.py
Problem5_ToolMassMismatch/: MUJOCO_LOG.TXT  README.md  correction_and_validation.py  demo.py  divergence_detector.py  parameter_identifier.py  paths.py  render_demo.py  render_demo_p4_base.py  sim_pair.py  step0.py
docs/: CAID_ARTIFACT_CONTRACT.md
tests/: test_caid_contract.py  test_golden_loop_fixture.py  test_mjcf_correction.py  (+4 more)
(+15 files in other folders)
